--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,18 @@
             <artifactId>spring-orm</artifactId>
             <version>6.2.5</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.6.11.Final</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.4.0</version>
+        </dependency>
     </dependencies>
     
     <build>
